Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.2

 - [ZBX-2219] fixed graphs data in data.sql (Aly)
 - [ZBX-1345] time filter redesigned, sliders moved to top inside filter (Vedmak)
 - [ZBX-2151] fixed header sorting in overview for items and triggers (AM)
 - [DEV-456] added filter to dashboard (Aly)
 - [ZBX-2191] remove broken trigger from the default dataset (Richlv)
 - [ZBX-2172] fixed object available scripts sorting alphabetically (AM)
 - [ZBX-2217] fixed JS error in status of triggers page in IE (Aly)
 - [ZBX-2199] fixed time output format when time is less then 1 ms (AM)
 - [ZBX-1956] fixed deletion of last row or col in screen (AM)
 - [ZBX-1956] added cursor pointer on minus (remove) icons in screens (AM)
 - [ZBX-1347] added support of hostnames and keys with spaces in sender input file (Sasha)
 - [ZBX-2189] fixed compilation under AIX 5.3 (Sasha)
 - [ZBX-1229] added comparison between IPv4, IPv4-mapped and IPv4-compatible allowed server addresses (Dmitry)
 - [ZBX-1949] fixed "housekeeping" procedure for the table "housekeeper" itself, added configuration parameter "MaxHousekeeperDelete" for the server (Dmitry)
 - [ZBX-2173] fixed too long URL for webgraph when many websteps are defined (Vedmak)
 - [ZBX-2139] fixed collecting of active checks after configured with user macro (Sasha)
 - [ZBXNEXT-238] added a command line option to zabbix_sender to send metrics in real time when reading from stdin (asaveljevs)
 - [ZBX-1000] enabled zabbix_sender to read its input from stdin; thanks to leo (asaveljevs)
 - [ZBX-2011] fixed e-mail sending format to meet 'SMTP/MIME e-mail' standards since UTF-8 is used. Thanks to Olexiy Zagorskiy. (Dmitry)
 - [ZBX-2136] fixed handling of logitems with logtimefmt in db cache (asaveljevs)
 - [ZBX-2193] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-2185] added view of parent template of linked template to host (Aly)